[project]
name = "tudien"
version = "0.1.0"
description = "Tudien project "
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "beautifulsoup4>=4.11.1",
    "iso-language-codes==1.1.0",
    "langcodes==3.5.0",
    "lxml>=4.9.1",
    "marisa-trie>=0.7.7",
    "pinyin-jyutping-sentence>=1.3",
    "pinyin>=0.4.0",
    "pyglossary>=4.6.1",
    "ruff>=0.8.2",
    "pypinyin>=0.53.0",
    "dragonmapper>=0.3.0",
    "pypinyin-dict>=0.8.0",
    "mdict-utils>=1.3.14",
    "python-lzo>=1.15",
    "tomli-w>=1.2.0",
]
